# job-application-tool

./: .env.example  .gitignore  Makefile  README.md  SETUP_UNIX_SERVER.md  main.py  pyproject.toml
.claude/: PRD.md
.claude/plans/: phase-1-project-setup.md  phase-2-scraper-service.md  phase-3-ranker-service.md  phase-4-generator-service.md  phase-5-e2e-testing.md
config/: profile.yaml  templates.yaml
deployments/: kustomization.yaml  namespace.yaml  secrets-template.yaml
deployments/applicant/: applicant-cj.yaml  applicant-cm.yaml  kustomization.yaml
deployments/generator/: generator-cj.yaml  generator-cm.yaml  kustomization.yaml
deployments/matcher/: kustomization.yaml  matcher-cj.yaml  matcher-cm.yaml
deployments/ranker/: kustomization.yaml  ranker-cj.yaml  ranker-cm.yaml
deployments/scraper/: kustomization.yaml  scraper-cj.yaml  scraper-cm.yaml
docker/: Dockerfile.applicant  Dockerfile.generator  Dockerfile.matcher  Dockerfile.ranker  Dockerfile.scraper
scripts/: 001_create_jobs_table.sql  002_add_generated_at.sql  002_add_matcher_columns.sql  003_cleanup_schema.sql  build-and-push-image.sh  deploy.sh
scripts/db/: init_collections.sh  init_mongodb.js
src/applicant/: __init__.py  main.py
src/generator/: __init__.py  cv_selector.py  cv_tailor.py  email_service.py  llm.py  main.py  pdf.py  profile.py  rendercv_generator.py
src/generator/cv/: ernest_haberli_ciso.yaml  ernest_haberli_vuln.yaml  ernest_haeberli_cv.yaml
src/matcher/: __init__.py  cv_loader.py  llm_matcher.py  main.py
src/matcher/cv/: ernest_haeberli.yaml
src/pipeline/: __init__.py  main.py  unified.py
src/ranker/: __init__.py  main.py  templates.py  translator.py
src/scraper/: __init__.py  apify_client.py  main.py
src/shared/: __init__.py  config.py  database.py  models.py
